--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "socket.io-client": "^4.5.3",
