--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.1.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-emoji": "^0.5.0",
     "react-file-base64": "^1.0.3",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
+    "react-scroll-to-bottom": "^4.2.0",
     "socket.io-client": "^4.5.3",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.4"
