--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-emoji": "^0.5.0",
     "react-file-base64": "^1.0.3",
+    "react-player": "^2.11.0",
     "react-router-dom": "^6.4.2",
     "react-scripts": "^2.1.3",
     "react-scroll-to-bottom": "^4.2.0",
